# libhandy-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Gir.toml  Handy-0.0.gir  README.md  meson.build  regen.sh
handy/: Cargo.toml  Gir.toml
handy-sys/: Cargo.toml  build.rs  gir-libhandy.toml
handy-sys/src/: lib.rs
handy-sys/tests/: abi.rs  constant.c  layout.c
handy/src/auto/: action_row.rs  arrows.rs  column.rs  dialer.rs  dialer_button.rs  dialer_cycle_button.rs  enums.rs  expander_row.rs  leaflet.rs  mod.rs  search_bar.rs  title_bar.rs  versions.txt
libhandy/: Cargo.toml  Gir.toml  LICENSE
libhandy-sys/: Cargo.toml  build.rs  gir-libhandy.toml  versions.txt
libhandy-sys/src/: lib.rs
libhandy-sys/tests/: abi.rs  constant.c  layout.c  manual.h
libhandy/src/: lib.rs  prelude.rs  rt.rs  value_object.rs
libhandy/src/auto/: action_row.rs  arrows.rs  column.rs  combo_row.rs  dialer.rs  dialer_button.rs  dialer_cycle_button.rs  dialog.rs  enums.rs  expander_row.rs  header_bar.rs  header_group.rs  keypad.rs  leaflet.rs  mod.rs  paginator.rs  preferences_group.rs  preferences_page.rs  preferences_row.rs  preferences_window.rs  search_bar.rs  squeezer.rs  swipe_group.rs  swipeable.rs  title_bar.rs  value_object.rs  view_switcher.rs  view_switcher_bar.rs
libhandy/tests/: main.rs
src/: lib.rs  manual.rs  rt.rs
src/auto/: arrows.rs  column.rs  dialer.rs  dialer_button.rs  dialer_cycle_button.rs  enums.rs  header_group.rs  leaflet.rs  mod.rs
subprojects/: libhandy.wrap
tests/: abi.rs  constant.c  layout.c  manual.h
