[package]
name = "libhandy"
authors = ["Julian Sparber <julian@sparber.net>"]
keywords = ["handy", "gtk-rs", "gnome"]
version = "0.1.0"
description = "Rust bindings for the libhandy"
workspace = "../"
exclude = [
    "gir-files/*",
]

[dependencies]
libc = "0.2"
bitflags = "1.0"
lazy_static = "1.0"
send-cell = { version = "0.1", optional = true }
futures-core = { version = "0.2", optional = true }
failure = "0.1.1"
notify-rust = "3.4.2"
glib-sys = "0.6.0"
glib = "0.5.0"
gtk = "0.4.0"
gtk-sys = "0.6.0"
gobject-sys = "0.6.0"
gio = "0.4.0"
gdk = "0.8.0"
gio-sys = "0.6.0"
gdk-sys = "0.6.0"

[dependencies.libhandy-sys]
version = "0.1.0"
git = "https://gitlab.gnome.org/jsparber/libhandy-sys-rs"
