[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
gdk = "0.9.0"
gdk-sys = "0.7.0"
gio = "0.5.1"
gio-sys = "0.7.0"
glib-sys = "0.7.0"
gobject-sys = "0.7.0"
gtk-sys = "0.7.0"
libc = "0.2"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
dox = []
v0_0_6 = []

[lib]
name = "libhandy_sys"

[package]
build = "build.rs"
links = "handy"
name = "libhandy-sys"
version = "0.1.0"
