[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
gdk = "0.9.0"
gdk-sys = "0.7.0"
gio = "0.5.1"
gio-sys = "0.7.0"
glib-sys = "0.7.0"
gobject-sys = "0.7.0"
gtk-sys = "0.7.0"
libc = "0.2"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
dox = []
v0_0_6 = []
v0_0_7 = ["v0_0_6"]

[lib]
name = "libhandy_sys"

[package]
authors = ["Julian Sparber <julian@sparber.net>"]
build = "build.rs"
description = "The sys part of the rust bindings for libhandy"
keywords = ["libhandy", "handy", "gtk-rs", "gnome"]
license = "GPL-3.0-or-later"
links = "handy"
name = "libhandy-sys"
repository = "https://gitlab.gnome.org/World/Rust/libhandy-rs"
version = "0.2.0"
