[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
pango-sys = "0.9"
gdk = "0.12"
gdk-sys = "0.9"
gio = "0.8"
gio-sys = "0.9"
glib-sys = "0.9"
gobject-sys = "0.9"
gtk-sys = "0.9"
libc = "0.2"

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"

[features]
v0_0_9 = ["v0_0_8"]
v0_0_6 = []
v0_0_7 = ["v0_0_6"]
v0_0_8 = ["v0_0_7"]
v0_0_10 = ["v0_0_8"]
dox = []
v0_0_11 = ["v0_0_10"]
v0_0_12 = ["v0_0_11"]

[lib]
name = "libhandy_sys"

[package]
authors = ["Julian Sparber <julian@sparber.net>"]
build = "build.rs"
description = "The sys part of the rust bindings for libhandy"
keywords = ["libhandy", "handy", "gtk-rs", "gnome"]
license = "GPL-3.0-or-later"
links = "handy"
name = "libhandy-sys"
repository = "https://gitlab.gnome.org/World/Rust/libhandy-rs"
version = "0.5.0"
[package.metadata.docs.rs]
features = ["dox"]
