[package]
name = "libhandy"
authors = ["Julian Sparber <julian@sparber.net>"]
keywords = ["libhandy", "handy", "gtk-rs", "gnome"]
version = "0.4.0"
description = "Rust bindings for libhandy"
license = "GPL-3.0-or-later"
repository = "https://gitlab.gnome.org/World/Rust/libhandy-rs"
exclude = [
    "gir-files/*",
    "gir/",
]

[dependencies]
libc = '0.2.49'
pango = '0.8'
bitflags = '1.0.4'
lazy_static = '1.2.0'
glib-sys = '0.9'
glib = '0.9'
gtk-sys = '0.9'
gobject-sys = '0.9'
gio = '0.8'
gdk = '0.12'
gio-sys = '0.9'
gdk-sys = '0.9'

[dependencies.gtk]
version = '0.8'
features = ['v3_24']

[dependencies.libhandy-sys]
version = "0.3.0"
path = "../libhandy-sys"

[features]
default = ["v0_0_10"]

dox = []
v0_0_6 = ["libhandy-sys/v0_0_6"]
v0_0_7 = ["v0_0_6", "libhandy-sys/v0_0_7"]
v0_0_8 = ["v0_0_7", "libhandy-sys/v0_0_8"]
v0_0_9 = ["v0_0_8", "libhandy-sys/v0_0_9"]
v0_0_10 = ["v0_0_9", "libhandy-sys/v0_0_10"]
